--- a/gnuboard5/plugin/editor/smarteditor2/smart_editor2_inputarea.html
+++ b/gnuboard5/plugin/editor/smarteditor2/smart_editor2_inputarea.html
@@ -4,5 +4,5 @@
 <meta charset="utf-8">
 <title>Smart Editor&#8482; WYSIWYG Mode</title>
 </head>
-<body class="se2_inputarea" style="height:0;-webkit-nbsp-mode:normal;background:#000; color:#eee"></body>
+<body class="se2_inputarea" style="height:0;-webkit-nbsp-mode:normal;background:rgba(17,17,17,0.9); color:#eee"></body>
 </html>
