--- a/gnuboard5/plugin/editor/smarteditor2/smart_editor2_inputarea_ie8.html
+++ b/gnuboard5/plugin/editor/smarteditor2/smart_editor2_inputarea_ie8.html
@@ -5,5 +5,5 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
 <title>Smart Editor&#8482; WYSIWYG Mode</title>
 </head>
-<body class="se2_inputarea" style="height:0;background:#000; color:#eee"></body>
+<body class="se2_inputarea" style="height:0;background:rgba(17,17,17,0.9); color:#eee"></body>
 </html>
